tests/invalid/invalid_undeclared.c
// FAIL
int main() {
    return x;
}
